--- a/experience.css
+++ b/experience.css
@@ -58,7 +58,7 @@ a {
 
 header{
     text-align: center;
-    background: url('../images/office.jpg') no-repeat top center;
+    background: url('images/rsz_office.jpg') no-repeat center;
     background-size:cover;
     overflow:hidden;
     padding-top: 500px;
