--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ a:hover {
 
 header {
   text-align: center; 
-  background: url('images/office.jpg') no-repeat top center ;
+  background: url('images/rsz_office.jpg') no-repeat center ;
   background-size: cover; 
   overflow: hidden; 
   padding-top: 60px;  
