--- a/experience.css
+++ b/experience.css
@@ -6,46 +6,21 @@ body {
     background: #f8f4f1;
 }
 
-.main-nav {
-    width: 100;
-    background: #3aa67b;
-    min-height: 30px;
-    padding: 10px;
-    position: relative;
-    text-align: center;
-}
-
 .nav {
-    display: flex;
-    justify-content: space-around;
+    display: flex;   
+    justify-content: space-around;   
     font-weight: 700;
-    margin: auto;
-    padding: 0;
-    list-style-type: none;
-
-}
+    list-style-type: none;  
+    margin: 0 auto; 
+    padding: 0px;
+    background: #3aa67b;
+  }    
     
-
-.nav .home  {
-   display:block;
-   margin-right: 20px;
-   color: black;
-    
-}
 
 .nav a:hover {
     color:orangered;
 }
 
-/* .nav .cables {
-    display: block;
-    height: auto;
-    text-align: right;
-    margin-right: 100px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-
-} */
 
 .nav li {
     padding: 5px 10px 10px 5px;
@@ -65,7 +40,7 @@ header{
 }
 
 header {
-    line-height: 1.5;
+    line-height: normal;
 }
 
 .tag {
@@ -87,7 +62,7 @@ header {
     background: #fff;
     border-bottom: 4px solid #ccc;
     border-radius: 6px;
-    transition: all .5s;
+    transition: all .5s; 
 }
 
 .card:hover {
@@ -99,11 +74,6 @@ header {
     display: flex;
 }
 
-.cables {
-    display: inline-flex;
-    display: -ms-flexbox;
-    max-width: 1100px;
-}
 
 
 footer {
