--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,13 @@ a:hover {
   text-align: center;
 } 
 .nav {
-  display: flex;  
-  justify-content: space-around;  
+  display: flex;   
+  justify-content: space-around;   
   font-weight: 700;
-  list-style-type: none; 
-  margin: 0 auto;
-  padding: 0;
-}  
+  list-style-type: none;  
+  margin: 0 auto; 
+  padding: 0px;
+}    
 
 .nav .name {
     display: block;
@@ -47,7 +47,7 @@ a:hover {
 } 
 .nav li {
   padding: 5px 10px 10px 10px;
-} 
+}  
 .nav a {
   transition: all .5s;
 } 
@@ -99,6 +99,7 @@ header .profile-image:hover {
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
   transition: all .5s;
+  
 }
 .card:hover {
   border-color: #ff99ff;
@@ -172,47 +173,47 @@ a.social:hover {
 h2 {
   background-color: #3aa67b;
   padding: 4px;
-  border: auto solid white;
+  border: 1px solid white;
   display: table;
   border-radius: 4px;
   margin: 20px auto;
 }
 
 /* Styles for larger screens */
-@media screen and (min-width: 720px) {
+/* @media screen and (min-width: 720px) {
   
-  .flex {
-      display: -ms-flexbox;      /* TWEENER - IE 10 */
+  /* .flex {
+      display: -ms-flexbox;      TWEENER - IE 10 
       display: flex; 
       max-width: 1200px;
       -ms-flex-pack: distribute;
       justify-content: space-around;
       margin: 0 auto;
-  } 
+  }  */ 
 
-  header {
+  /* header {
     min-height: 470px;
-  }
+  } */
 
-  .nav {
+  /* .nav {
     max-width: 1200px;
     padding: 0 30px;
-  }
+  } */
 
 
-  main {
+  /* main {
     padding-top: 20px;
-  }
+  } */
 
-  main p {
+  /* main p {
     line-height: 1.6em;
-  }
+  } */
 
-  footer {
+  /* footer {
     font-size: 1.3em;
     max-width: 1200px;
     margin: 40px auto;
-  }
+  } 
 
-}
+}  */
 
