changed div into section in experience.html

--- a/styles.css
+++ b/styles.css
@@ -180,40 +180,40 @@ h2 {
 }
 
 /* Styles for larger screens */
-/* @media screen and (min-width: 720px) {
+ @media screen and (min-width: 720px) {
   
-  /* .flex {
-      display: -ms-flexbox;      TWEENER - IE 10 
+  .flex {
+      display: -ms-flexbox;      /*TWEENER - IE 10 */
       display: flex; 
       max-width: 1200px;
       -ms-flex-pack: distribute;
       justify-content: space-around;
       margin: 0 auto;
-  }  */ 
+  }  
 
-  /* header {
+  header {
     min-height: 470px;
-  } */
+  } 
 
-  /* .nav {
+   .nav {
     max-width: 1200px;
     padding: 0 30px;
-  } */
+  } 
 
 
-  /* main {
+  main {
     padding-top: 20px;
-  } */
+  } 
 
-  /* main p {
+   main p {
     line-height: 1.6em;
-  } */
+  } 
 
-  /* footer {
+   footer {
     font-size: 1.3em;
     max-width: 1200px;
     margin: 40px auto;
   } 
 
-}  */
+}  
 
