--- a/experience.css
+++ b/experience.css
@@ -36,11 +36,11 @@ header{
     background: url('images/rsz_office.jpg') no-repeat center;
     background-size:cover;
     overflow:hidden;
-    padding-top: 500px;
+    padding-top: 60px;
 }
 
 header {
-    line-height: normal;
+    line-height: 1.5;
 }
 
 .tag {
@@ -49,7 +49,7 @@ header {
     padding: 10px;
     border-radius: 10px;
     display: table;
-    margin: 20px auto;
+    margin: 10px auto;
 }
 
 .card {
@@ -115,4 +115,37 @@ h2 {
     display: table;
     border-radius: 4px;
     margin: 20px auto;
+}
+
+@media screen and (min-width: 720px) {
+    .flex {
+        display: -ms-flexbox;      /*TWEENER - IE 10 */
+        display: flex; 
+        max-width: 1200px;
+        -ms-flex-pack: distribute;
+        justify-content: space-around;
+        margin: 0 auto;
+    } 
+
+    header {
+        min-height: 470px;
+    } 
+
+    .nav {
+        max-width: 1200px;
+        padding: 0 30px;
+    } 
+
+    main {
+        padding-top: 20px;
+    }
+
+    main p {
+        line-height: 1.6em;
+    } 
+    footer {
+        font-size: 1.3em;
+        max-width: 1200px;
+        margin: 40px auto;
+    }
 }
