--- a/experience.css
+++ b/experience.css
@@ -117,6 +117,10 @@ h2 {
     margin: 20px auto;
 }
 
+.image {
+    border-radius: 20px;
+}
+
 @media screen and (min-width: 720px) {
     .flex {
         display: -ms-flexbox;      /*TWEENER - IE 10 */
